<resources>
    <string name="app_name">Trivia</string>
    <string name="trivia_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="next_button">next</string>
    <string name="question_text">here we will show the question that has to be shown</string>
    <string name="place_holder">anything</string>
    <string name="text_formatted">Question: %d/ %d</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="highestScore">Highest Score:</string>
</resources>